--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply from: file('../deploy_sonatype.gradle')
 
 android {
     compileSdkVersion 19
@@ -8,8 +9,8 @@ android {
         minSdkVersion 10
         targetSdkVersion 19
 
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "0.1.1"
     }
     buildTypes {
         release {
@@ -21,6 +22,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':log4android')
-    compile project(':libDroid')
+//    compile project(':log4android')
+//    compile project(':libDroid')
+    compile 'com.github.lisicnu:log4android:1.0.1'
+    compile 'com.github.lisicnu:libDroid:1.0.1'
 }
