--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.library'
 apply from: file('../deploy_sonatype.gradle')
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.1.1"
 
     defaultConfig {
         minSdkVersion 10
-        targetSdkVersion 19
+        targetSdkVersion 21
 
         versionCode 2
         versionName "0.1.1"
@@ -21,9 +21,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-//    compile project(':log4android')
-//    compile project(':libDroid')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    //    compile project(':log4android')
+    //    compile project(':libDroid')
     compile 'com.github.lisicnu:log4android:1.0.1'
-    compile 'com.github.lisicnu:libDroid:0.1.1'
+    compile 'com.github.lisicnu:droidUtil:0.1.1'
 }
